--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -3,7 +3,7 @@
     font-family: var(--ff-accent);
     color: var(--clr-primary-800);
 
-    margin-block: 2.5rem;
+    padding-block: 2.5rem;
     font-size: 3rem;
     margin-inline: auto;
     text-align: center;
