Fix styling: level margins

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -143,8 +143,8 @@ h6 {
   overflow-wrap: break-word;
   line-height: 1;
 }
-// // 9. Create a root stacking context
-// #root,
-// #__next {
-//   isolation: isolate;
-// }
+// 9. Create a root stacking context
+#root,
+#__next {
+  isolation: isolate;
+}
