--- a/src/pages/level/components/gameplay/GamePlay.scss
+++ b/src/pages/level/components/gameplay/GamePlay.scss
@@ -1,7 +1,7 @@
 .gameplay {
   position: relative;
   object-fit: cover;
-  margin: auto;
+  margin: 1rem auto;
 
   &__zoom {
     position: absolute;
