Refactor gameplay: magnifier & menu toggle

--- a/src/pages/level/components/gameplay/GamePlay.scss
+++ b/src/pages/level/components/gameplay/GamePlay.scss
@@ -9,5 +9,6 @@
     background-repeat: no-repeat;
     border-radius: 50%;
     overflow: hidden;
+    border: 3px solid var(--clr-accent-900);
   }
 }
