Add character found statuses to level header

--- a/src/pages/level/components/gameplay/GamePlay.scss
+++ b/src/pages/level/components/gameplay/GamePlay.scss
@@ -51,3 +51,12 @@
     border: 3px solid var(--clr-accent-500);
   }
 }
+
+// .character__found {
+//   position: absolute;
+//   width: 50px;
+//   aspect-ratio: 1/1;
+//   border-radius: 100%;
+//   background: none;
+//   border: 5px solid var(--clr-accent-500);
+// }
