Add LinkButton component

--- a/src/pages/home/components/level-card/LevelCard.scss
+++ b/src/pages/home/components/level-card/LevelCard.scss
@@ -13,6 +13,13 @@
     gap: 1.5rem;
 
     padding: 1.75rem;
+
+    a,
+    a:visited,
+    a:active,
+    a:hover {
+      display: grid;
+    }
   }
 
   &__name {
