--- a/src/pages/level/components/gameplay/GamePlay.scss
+++ b/src/pages/level/components/gameplay/GamePlay.scss
@@ -1,7 +1,13 @@
 .gameplay {
   position: relative;
-  object-fit: cover;
   user-select: none;
+
+  &__img {
+    min-height: 100%;
+    min-width: 100%;
+    object-fit: cover;
+    overflow: auto;
+  }
 
   &__zoom {
     position: absolute;
@@ -52,11 +58,11 @@
   }
 }
 
-// .character__found {
-//   position: absolute;
-//   width: 50px;
-//   aspect-ratio: 1/1;
-//   border-radius: 100%;
-//   background: none;
-//   border: 5px solid var(--clr-accent-500);
-// }
+.character__found {
+  position: absolute;
+  width: 50px;
+  aspect-ratio: 1/1;
+  border-radius: 100%;
+  background: none;
+  border: 5px solid var(--clr-accent-500);
+}
