--- a/src/pages/level/components/gameover-modal/GameOverModal.scss
+++ b/src/pages/level/components/gameover-modal/GameOverModal.scss
@@ -5,7 +5,7 @@
   transform: translate(-50%, -50%);
 
   display: grid;
-  gap: 1rem;
+  gap: 2rem;
 
   padding: 2rem;
 
@@ -16,12 +16,83 @@
   text-align: center;
 
   &__header {
+    display: grid;
+    gap: 1rem;
+  }
+
+  &__title {
     text-transform: uppercase;
     font-family: var(--ff-accent);
   }
 
   &__para {
-    font-size: 1.25rem;
+    text-align: left;
+    font-size: 1.1rem;
     line-height: 1.5;
+  }
+
+  button {
+    width: 100%;
+  }
+}
+
+.form {
+  display: grid;
+  grid-template-columns: 1fr min-content;
+  grid-template-areas: "label label" "input button";
+  column-gap: 1rem;
+  align-items: center;
+
+  &__fieldset {
+    display: contents;
+  }
+
+  &__label {
+    grid-area: label;
+
+    text-align: left;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+
+    font-size: 0.9rem;
+    font-weight: var(--fw-bold);
+  }
+
+  &__input {
+    grid-area: input;
+    padding: 0.2rem 0.5rem;
+    border: 3px solid var(--clr-primary-200);
+    border-radius: var(--border-radius-100);
+
+    &:focus {
+      outline: 0;
+    }
+
+    &::placeholder {
+      font-style: italic;
+    }
+  }
+
+  &__button {
+    grid-area: button;
+    margin-top: 1rem;
+  }
+}
+
+.leaderboard {
+  text-align-last: left;
+
+  &__header {
+    text-transform: uppercase;
+    font-family: var(--ff-accent);
+    margin-bottom: 8px;
+  }
+
+  &__entry {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 8px;
+
+    font-family: var(--ff-accent);
   }
 }
