Improve gameplay styles

--- a/src/pages/level/components/gameplay/GamePlay.scss
+++ b/src/pages/level/components/gameplay/GamePlay.scss
@@ -1,12 +1,20 @@
 .gameplay {
   position: relative;
   user-select: none;
+  object-fit: cover;
+
+  &__wrapper {
+    height: 100%;
+    background: linear-gradient(
+      to right,
+      var(--clr-primary-200),
+      var(--clr-primary-300)
+    );
+  }
 
   &__img {
-    min-height: 100%;
     min-width: 100%;
-    object-fit: cover;
-    overflow: auto;
+    border-bottom: 3px solid var(--clr-primary-400);
   }
 
   &__zoom {
