--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -13,5 +13,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
     gap: 1.5rem;
+
+    padding: 1rem;
   }
 }
