--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -85,8 +85,13 @@ body {
 }
 
 main {
-  min-height: 100%;
   position: relative;
+  min-height: 100%;
+  background: linear-gradient(
+    to bottom right,
+    var(--clr-primary-100),
+    var(--clr-primary-200)
+  );
 }
 
 // -----------------------------------------------------
