--- a/src/pages/level/components/gameplay/GamePlay.scss
+++ b/src/pages/level/components/gameplay/GamePlay.scss
@@ -14,7 +14,7 @@
     background-repeat: no-repeat;
     border-radius: 50%;
     overflow: hidden;
-    border: 5px solid var(--clr-accent-500);
+    box-shadow: var(--box-shadow-200);
   }
 }
 
