--- a/src/pages/level/components/level-header/LevelHeader.scss
+++ b/src/pages/level/components/level-header/LevelHeader.scss
@@ -3,6 +3,9 @@
   top: 0;
   left: 0;
 
+  // display over modal's overlay
+  z-index: 1;
+
   background: var(--clr-primary-300);
   padding: 0.5rem;
   border-bottom: 3px solid var(--clr-primary-400);
