Add saving score message after leaderboard submission

--- a/src/pages/level/components/gameover-modal/GameOverModal.scss
+++ b/src/pages/level/components/gameover-modal/GameOverModal.scss
@@ -81,6 +81,13 @@
   }
 }
 
+.saving__score {
+  text-align-last: left;
+  font-weight: bold;
+  font-family: var(--ff-accent);
+  text-transform: uppercase;
+}
+
 .leaderboard {
   text-align-last: left;
 
